--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AppBanHang
 endorsed.classpath=
 excludes=
-file.reference.flatlaf-0.36.jar=D:\\DA1\\SanPham\\Du-An\\DMDA1\\lib\\flatlaf-0.36.jar
+file.reference.flatlaf-0.36.jar=lib/flatlaf-0.36.jar
+file.reference.sqljdbc4.jar=lib/sqljdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.flatlaf-0.36.jar}
+    ${file.reference.flatlaf-0.36.jar}:\
+    ${file.reference.sqljdbc4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
