--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,12 +36,14 @@ dist.jlink.output=${dist.jlink.dir}/AppBanHang
 endorsed.classpath=
 excludes=
 file.reference.flatlaf-0.36.jar=lib/flatlaf-0.36.jar
+file.reference.javax.mail-1.6.2.jar=D:\\SOF203_JAVA3\\javax.mail-1.6.2.jar
 file.reference.sqljdbc4.jar=lib/sqljdbc4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.flatlaf-0.36.jar}:\
-    ${file.reference.sqljdbc4.jar}
+    ${file.reference.sqljdbc4.jar}:\
+    ${file.reference.javax.mail-1.6.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
