them giao dien chao va them thu vien mailY

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,7 @@ dist.jlink.output=${dist.jlink.dir}/AppBanHang
 endorsed.classpath=
 excludes=
 file.reference.flatlaf-0.36.jar=lib/flatlaf-0.36.jar
-file.reference.javax.mail-1.6.2.jar=D:\\SOF203_JAVA3\\javax.mail-1.6.2.jar
+file.reference.javax.mail-1.6.2.jar=lib/javax.mail-1.6.2.jar
 file.reference.sqljdbc4.jar=lib/sqljdbc4.jar
 includes=**
 jar.compress=false
