hoan thanh form order va them anh cho form home

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,7 +43,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.flatlaf-0.36.jar}:\
     ${file.reference.sqljdbc4.jar}:\
-    ${file.reference.javax.mail-1.6.2.jar}
+    ${file.reference.javax.mail-1.6.2.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
