--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,16 +35,27 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/AppBanHang
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=lib/AbsoluteLayout.jar
+file.reference.commons-collections4-4.1.jar=lib/commons-collections4-4.1.jar
 file.reference.flatlaf-0.36.jar=lib/flatlaf-0.36.jar
 file.reference.javax.mail-1.6.2.jar=lib/javax.mail-1.6.2.jar
+file.reference.poi-3.17.jar=lib/poi-3.17.jar
+file.reference.poi-ooxml-3.17.jar=lib/poi-ooxml-3.17.jar
+file.reference.poi-ooxml-schemas-3.17.jar=lib/poi-ooxml-schemas-3.17.jar
 file.reference.sqljdbc4.jar=lib/sqljdbc4.jar
+file.reference.xmlbeans-2.6.0.jar=lib/xmlbeans-2.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.flatlaf-0.36.jar}:\
     ${file.reference.sqljdbc4.jar}:\
     ${file.reference.javax.mail-1.6.2.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.commons-collections4-4.1.jar}:\
+    ${file.reference.poi-3.17.jar}:\
+    ${file.reference.poi-ooxml-3.17.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
