--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -6,4 +6,4 @@ javac.debug=true
 javadoc.preview=true
 jlink.strip=false
 user.properties.file=C:\\Users\\suong\\AppData\\Roaming\\NetBeans\\11.1\\build.properties
-user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\suong\\AppData\\Roaming\\NetBeans\\11.1\\build.properties
